--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+android:layout_width="fill_parent"
+android:layout_height="fill_parent">
 
-    <ImageView
-        android:id="@+id/imgLiveo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="121dp"
-        android:contentDescription="@string/clear"
-        android:src="@drawable/ic_liveo" />
-
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imgLiveo"
-        android:gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/clear"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+<it.gmariotti.cardslib.library.view.CardListView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/myList"/>
 </RelativeLayout>
