--- a/app/src/main/res/layout/fragment_estabelecimento.xml
+++ b/app/src/main/res/layout/fragment_estabelecimento.xml
@@ -20,7 +20,25 @@
             android:layout_height="match_parent" >
 
             <RelativeLayout
-                android:id="@+id/detalhes"
+                android:id="@+id/semVistoria"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+                <ListView
+                    android:id="@+id/list_pontos_semVistoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left|center_vertical" />
+
+                <Button
+                    android:id="@+id/novoPonto"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:text="Novo" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/emVistoria"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
 
@@ -29,12 +47,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/list_pontos_emVistoria" />
 
-                <Button
-                    android:id="@+id/salvar"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:text="salvar" />
 
             </RelativeLayout>
             <RelativeLayout
@@ -46,6 +58,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="left|center_vertical" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/regular"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+                <ListView
+                    android:id="@+id/list_pontos_regular"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left|center_vertical" />
+
             </RelativeLayout>
         </FrameLayout>
     </LinearLayout>
