--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.edu.ufra.appfiscalizacao.interfaces.LoginActivity">
+    tools:context="br.edu.ufra.appfiscalizacao.activity.LoginActivity">
 
     <EditText
         android:layout_width="wrap_content"
