--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 android:layout_width="fill_parent"
 android:layout_height="fill_parent">
 
-<it.gmariotti.cardslib.library.view.CardListView
+<TextView
+    android:id="@+id/txtTitle"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/myList"/>
+    android:layout_height="wrap_content" />
 </RelativeLayout>
