--- a/app/src/main/res/layout/item_model.xml
+++ b/app/src/main/res/layout/item_model.xml
@@ -14,6 +14,8 @@
             android:id="@+id/situacaopoint"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:textColor="@color/nliveo_lime_alpha_colorPrimaryDark"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_alignBottom="@+id/photopoint"
             android:layout_toRightOf="@+id/photopoint"
             android:layout_toEndOf="@+id/photopoint"
@@ -23,8 +25,9 @@
             android:id="@+id/namepoint"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:gravity="center_vertical"
-            android:textColor="#FF000000"
+            android:textColor="@color/nliveo_brown_colorPrimaryDark"
             android:layout_toRightOf="@+id/photopoint"
             android:layout_toEndOf="@+id/photopoint" />
 
