--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent">
-
-<TextView
-    android:id="@+id/txtTitle"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-</RelativeLayout>
+    android:layout_height="match_parent">
+
+<ListView
+    android:id="@+id/listviewteste"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></ListView>
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_inbox_black_24dp"
+        fab:fab_shadow="true"
+
+         />
+
+
+
+
+
+</FrameLayout>
