--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/nliveo_blue_colorPrimary</item>
         <item name="colorPrimaryDark">@color/nliveo_blue_alpha_colorPrimaryDark</item>
         <item name="colorAccent">@color/nliveo_blue_colorPrimary</item>
+
+
     </style>
 
     <style name="nLiveoDrawer" parent="nLiveo.Theme.Light">
@@ -15,5 +17,12 @@
 
 
     </style>
+
+
+    <style name="AppTheme.Fab" parent="FloatingActionButton">
+    <item name="floatingActionButtonColor">@color/nliveo_orange_alpha_colorPrimaryDark</item>
+</style>
+
+
 
 </resources>
