--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -1,19 +1,78 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.edu.ufra.appfiscalizacao.activity.DetalheActivity">
+    tools:context="br.edu.ufra.appfiscalizacao.activity.DetalheActivity"
+    android:weightSum="1">
 
+    <ImageView
+        android:src="@drawable/ic_launche2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/imageView3" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
-        android:id="@+id/txtdetalhes"
-
+        android:paddingTop="15dp"
+        android:paddingBottom="2dp"
+        android:text="Nome: "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/nliveo_black" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/txvNomeTec"
+            android:text="nome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:paddingBottom="2dp"
+            android:text="Matricula: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/nliveo_black" />
+
+        <TextView
+            android:id="@+id/txvMatriculaTec"
+            android:text="matricula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:paddingBottom="2dp"
+            android:text="Email: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/nliveo_black" />
+
+        <TextView
+            android:id="@+id/txvEmailTec"
+            android:text="email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
+</LinearLayout>
