--- a/app/src/main/res/layout/activity_estabelecimento_detalhes.xml
+++ b/app/src/main/res/layout/activity_estabelecimento_detalhes.xml
@@ -26,7 +26,7 @@
             android:text="Nome: " />
 
         <TextView
-            android:id="@+id/nomeEstabelecimento"
+            android:id="@+id/nomeEstabelecimento2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -44,7 +44,7 @@
             android:text="Contato: " />
 
         <TextView
-            android:id="@+id/contatoEstabelecimento"
+            android:id="@+id/contatoEstabelecimento2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -61,7 +61,7 @@
             android:text="Logradouro: " />
 
         <TextView
-            android:id="@+id/logradouroEstabelecimento"
+            android:id="@+id/logradouroEstabelecimento2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -78,7 +78,7 @@
             android:text="Bairro: " />
 
         <TextView
-            android:id="@+id/bairroEstabelecimento"
+            android:id="@+id/bairroEstabelecimento2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -95,7 +95,7 @@
             android:text="Telefone: " />
 
         <TextView
-            android:id="@+id/telefoneEstabelecimento"
+            android:id="@+id/telefoneEstabelecimento2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -112,7 +112,7 @@
             android:text="Status: " />
 
         <TextView
-            android:id="@+id/statusEstabelecimento"
+            android:id="@+id/statusEstabelecimento2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -121,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
