--- a/app/src/main/res/layout/activity_estabelecimento_detalhes_vistoria.xml
+++ b/app/src/main/res/layout/activity_estabelecimento_detalhes_vistoria.xml
@@ -22,6 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+
+                <!--TAB3 1-->
                 <RelativeLayout
                     android:id="@+id/dadosvistoria"
                     android:layout_width="match_parent"
@@ -145,6 +147,11 @@
                                 android:layout_height="wrap_content" />
                         </LinearLayout>
 
+                        <Button
+                            android:id="@+id/btproximo1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Próximo"/>
                         <FrameLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
@@ -162,9 +169,9 @@
                     </LinearLayout>
 
 
-
                 </RelativeLayout>
 
+                <!--TAB3 2-->
                 <RelativeLayout
                     android:id="@+id/equipamentosobrigatorio"
                     android:layout_width="match_parent"
@@ -219,6 +226,7 @@
                     </LinearLayout>
                 </RelativeLayout>
 
+                <!--TAB3 3-->
                 <RelativeLayout
                     android:id="@+id/demaisequipamentos"
                     android:layout_width="match_parent"
