Criacao do metodo de realizar vistoria, obter equipamentos do WS e realização da inspecao.

--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -31,7 +31,7 @@
 
         <TextView
             android:id="@+id/txvNomeTec"
-            android:text="nome"
+            android:text="nomeFantasia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
