--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,30 +4,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.edu.ufra.appfiscalizacao.activity.LoginActivity">
+    tools:context="br.edu.ufra.appfiscalizacao.activity.publico.LoginActivity">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/loginname"
+        android:id="@+id/matriculaTec1"
+        android:inputType="numberDecimal"
         android:textColor="@color/nliveo_black"
-        android:hint="login"
+        android:hint="Matrícula técnico 1"
         android:textColorHint="@color/nliveo_black"
-        android:layout_above="@+id/loginPassword"
-        android:layout_alignRight="@+id/loginPassword"
-        android:layout_alignEnd="@+id/loginPassword"
-        android:layout_alignLeft="@+id/loginPassword"
-        android:layout_alignStart="@+id/loginPassword" />
+        android:layout_above="@+id/matriculaTec2"
+        android:layout_alignRight="@+id/matriculaTec2"
+        android:layout_alignEnd="@+id/matriculaTec2"
+        android:layout_alignLeft="@+id/matriculaTec2"
+        android:layout_alignStart="@+id/matriculaTec2" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberPassword"
+        android:inputType="numberDecimal"
         android:textColor="@color/nliveo_black"
-        android:hint="password"
+        android:hint="Matrícula técnico 2"
         android:textColorHint="@color/nliveo_black"
         android:ems="10"
-        android:id="@+id/loginPassword"
+        android:id="@+id/matriculaTec2"
         android:layout_marginBottom="68dp"
         android:layout_above="@+id/btnLogin"
         android:layout_centerHorizontal="true" />
@@ -45,7 +46,7 @@
         android:layout_height="60px"
         android:id="@+id/space"
         android:layout_marginBottom="32dp"
-        android:layout_above="@+id/loginname"
+        android:layout_above="@+id/matriculaTec1"
         android:layout_centerHorizontal="true" />
 
     <Button
