--- a/app/src/main/res/layout/vistoria_model.xml
+++ b/app/src/main/res/layout/vistoria_model.xml
@@ -14,8 +14,9 @@
        android:id="@+id/dataVistoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-
-            />
+       android:text="Data"
+       android:textSize="20sp"
+                             />
 
 
     </RelativeLayout>
